<resources>
    <string name="appName">TravelBuddy</string>
    <string name="descriptionSplashIcon">Logo Splash</string>
    <string name="descriptionSplashBackground">Fondo Splash</string>
    <string name="labelSplash">Splash Activity</string>
    <string name="labelMain">Main Activity</string>
    <string name="titleHome">Inicio</string>
    <string name="titleFavorite">Favorito</string>
    <string name="titleDiscovery">Explorar</string>
    <string name="titleUser">Usuario</string>
    <string name="labelCityFeatureTransport">Transporte</string>
    <string name="titleRankingFirst">1</string>
    <string name="titleRankingSecond">2</string>
    <string name="titleRankingThird">3</string>
    <string name="titleCountryTips">Tips</string>
    <string name="titleCountryMoreCities">Más Ciudades</string>
    <string name="descriptionIconLocationCountry">Ver localizacion en el Mapa</string>
    <string name="descriptionImageCountryCity">Imagen de la ciudad</string>
    <string name="descriptionImageExpansionIndicatorTipsCountry">Mostrar o Ocultar Tips</string>
    <string name="titleCountryTipsSubtitle">Consejos Generales</string>
    <string name="descriptionRankingCity">%1$s / 5</string>
    <string name="valueGeolocationMaps">geo:%1$s,%2$s?z=%3$s</string>
    <string name="valueTipsGeolocation">Abrir mapa</string>
    <string name="valueTipsWebpage">Abrir pagina web</string>

    <string name="cityCardTransitionName">city_card_detail_%1$s</string>
    <string name="cityCardDetailTransitionName">city_card_detail</string>

    <string name="attractionCardTransitionName">attraction_card_detail_%1$s</string>
    <string name="attractionCardDetailTransitionName">attraction_card_detail</string>

    <string name="serviceCardTransitionName">service_card_detail_%1$s</string>
    <string name="serviceCardDetailTransitionName">service_card_detail</string>

    <string name="cityServiceCardTransitionName">city_service_card_detail_%1$s</string>
    <string name="cityServiceCardDetailTransitionName">city_service_card_detail</string>

    <string name="locationNotAvailable">Localizacion no disponible</string>
    <string name="erroConnection">Intente nuevamente</string>
    <string name="countryTipEmoji">Emoji</string>
    <string name="contentDescriptionCityImage">Imagen portada de la ciudad</string>
    <string name="titleCityAttraction">Atractivos</string>
    <string name="titleCityService">Servicios</string>
    <string name="descriptionImageAttractionCity">Atraccion de una Ciudad</string>
    <string name="descriptionIconServiceCity">Icono del servicio</string>
    <string name="serviceCardReviewAmount">(%1$d)</string>
    <string name="descriptionImageReviewServiceCity">Resena del Servicio</string>
    <string name="noDate">Sin Fecha</string>


    <string name="featureFood">Gastronomia</string>
    <string name="featureFoodAttraction">Restaurantes</string>
    <string name="featureActivity">Excursiones</string>
    <string name="featureService">Servicios</string>
    <string name="featureTransport">Transporte</string>
    <string name="featureTransportService">Movilidad</string>
    <string name="featureEnvironment">Entorno</string>
    <string name="descriptionTipsIcon">Icono Tips</string>
    <string name="titleServiceTips">Selección</string>
    <string name="titleServiceTipsSubtitle">Recomendado por la comunidad</string>
    <string name="contentDescriptionIconWelcome">Icono logo</string>
    <string name="textTitleWelcome">Tu nuevo  compañero de viajes</string>
    <string name="textSubtitleWelcome">Miles de viajeros consultan TravelBuddy antes de emprender un nuevo viaje.</string>
    <string name="textGoNewUserWelcome">Registrate</string>
    <string name="textGoLoginWelcome">Iniciar sesión</string>
    <string name="textQuestionWelcome">¿Ya tienes una cuenta?</string>
    <string name="textTitleLogin">¡Volviste!</string>
    <string name="textSubtitleLogin">Que alegria tenerte de vuelta \n ¿Nos ponemos al día?</string>
    <string name="hintUserLogin">Usuario</string>
    <string name="textDoLogin">Ingresar</string>
    <string name="textQuestionLogin">¿No tienes una cuenta?</string>
    <string name="textGoNewUserLogin">Registrate</string>
    <string name="textTitleNewUser">Crea tu cuenta</string>
    <string name="hintEmailNewUser">Email</string>
    <string name="hintNombreNewUser">Nombre</string>
    <string name="hintPasswordLogin">Contraseña</string>
    <string name="hintPasswordNewUser">Contraseña</string>
    <string name="textDoRegisterNewUser">Empecemos</string>
    <string name="textNeedLogin">Requiere iniciar una sesion</string>
    <string name="contentDescriptionImageUser">Icono del Usuario</string>
    <string name="textCategoryRanking">Top Ciudades</string>
    <string name="textFavoriteUser">Favoritos</string>
</resources>