<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image_logo_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="100dp"
            android:contentDescription="@string/contentDescriptionIconWelcome"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            app:srcCompat="@drawable/ic_logo_text" />

        <TextView
            android:id="@+id/text_title_welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="100dp"
            android:text="@string/textTitleWelcome"
            android:textAlignment="center"
            android:textAppearance="?attr/textAppearanceHeadline1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_logo_welcome" />

        <TextView
            android:id="@+id/text_subtitle_welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="16dp"
            android:text="@string/textSubtitleWelcome"
            android:textAlignment="center"
            android:textAppearance="?attr/textAppearanceSubtitle1"
            android:textColor="@color/colorTextSubtitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_title_welcome" />

        <Button
            android:id="@+id/button_go_login_welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="40dp"
            android:background="@drawable/shape_round_button"
            android:text="@string/textGoNewUserWelcome"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_subtitle_welcome" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="16dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_go_login_welcome">

            <TextView
                android:id="@+id/question_welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textQuestionWelcome"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                android:textColor="@color/colorTextSubtitle" />

            <TextView
                android:id="@+id/text_go_new_user_welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/textGoLoginWelcome"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                android:textStyle="bold" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>