<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_title_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="100dp"
            android:text="@string/textTitleLogin"
            android:textAlignment="center"
            android:textAppearance="?attr/textAppearanceHeadline1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:id="@+id/text_subtitle_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="16dp"
            android:text="@string/textSubtitleLogin"
            android:textAlignment="center"
            android:textAppearance="?attr/textAppearanceSubtitle1"
            android:textColor="@color/colorTextSubtitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_title_login" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_user_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintUserLogin"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_subtitle_login"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_password_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintPasswordLogin"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="8dp"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_user_login"
            app:endIconMode="password_toggle"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_do_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/shape_round_button"
            android:text="@string/textDoLogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_password_login" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="20dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:id="@+id/question_welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textQuestionLogin"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                android:textColor="@color/colorTextSubtitle" />

            <TextView
                android:id="@+id/text_go_new_user_welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/textGoNewUserLogin"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                android:textStyle="bold" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>