<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_city"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorActivityDefault"
        android:focusableInTouchMode="true"
        tools:context=".ui.activity.MainActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:transitionName="@string/cityCardDetailTransitionName">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_city_header"
                android:layout_width="match_parent"
                android:layout_height="@dimen/cityTitleHeight"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/card_city_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/contentDescriptionCityImage"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@color/colorPrimaryDark" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentBottom="true"
                    android:background="@drawable/gradient_city" />

                <LinearLayout
                    android:id="@+id/layout_city_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/cityTitleMarginHorizontal"
                    android:layout_marginTop="@dimen/cityTitleMarginTop"
                    android:layout_marginBottom="8dp"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent">

                    <TextView
                        android:id="@+id/card_city_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?attr/textAppearanceHeadline1"
                        android:textColor="@color/colorTextDark"
                        tools:text="Ciudad Autonoma de Buenos Aires" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <RatingBar
                            android:id="@+id/card_city_ranking"
                            style="@style/Widget.AppCompat.RatingBar.Small"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:rating="5" />

                        <TextView
                            android:id="@+id/card_city_ranking_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:textAppearance="?attr/textAppearanceCaption"
                            android:textColor="@color/colorTextDark"
                            tools:text="3.5" />
                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="10dp"
                        android:text="@string/titleCityAttraction"
                        android:textAppearance="?attr/textAppearanceHeadline2"
                        android:textColor="@color/colorTextDark" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/view_attraction_city"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:transitionGroup="true" />

                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/layout_city_header"
                app:layout_constraintBottom_toTopOf="@id/layout_city_features"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                >

                <com.github.florent37.expansionpanel.ExpansionHeader
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginVertical="8dp"
                    app:expansion_headerIndicator="@id/expansion_indicator_tips_city"
                    app:expansion_layout="@id/expansion_tips_city"
                    app:expansion_toggleOnClick="true">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/shape_gradient_tips">

                        <TextView
                            android:id="@+id/expansion_title_tips_city"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="24dp"
                            android:layout_marginTop="16dp"
                            android:text="@string/titleCountryTips"
                            android:textAppearance="?attr/textAppearanceHeadline2"
                            android:textColor="@color/colorTextDark"
                            app:layout_constraintBottom_toTopOf="@id/expansion_subtitle_tips_city"
                            app:layout_constraintEnd_toStartOf="@id/expansion_indicator_tips_city"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/expansion_subtitle_tips_city"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="24dp"
                            android:layout_marginBottom="16dp"
                            android:text="@string/titleCountryTipsSubtitle"
                            android:textAppearance="?attr/textAppearanceOverline"
                            android:textColor="@color/colorTitleRanking"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@id/expansion_indicator_tips_city"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/expansion_title_tips_city" />

                        <com.google.android.material.imageview.ShapeableImageView
                            android:id="@+id/expansion_indicator_tips_city"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_marginTop="24dp"
                            android:layout_marginEnd="32dp"
                            android:layout_marginBottom="24dp"
                            android:background="@color/white"
                            android:contentDescription="@string/descriptionImageExpansionIndicatorTipsCountry"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerCircle"
                            app:srcCompat="@drawable/ic_expansion_header_indicator_grey_24dp" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </com.github.florent37.expansionpanel.ExpansionHeader>

                <com.github.florent37.expansionpanel.ExpansionLayout
                    android:id="@+id/expansion_tips_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/view_tips_city"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.github.florent37.expansionpanel.ExpansionLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_city_features"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/cityServiceTitleMarginHorizontal"
                    android:layout_marginTop="@dimen/cityServiceTitleMarginHorizontal"
                    android:textAppearance="?attr/textAppearanceHeadline2"
                    android:text="@string/titleCityService" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/view_services_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>